# gesture_recognition

./: package.xml  setup.cfg  setup.py
gesture_recognition/: hand_gesture_node.py  my_node.py  webcam_publisher.py
gesture_recognition/model/: __init__.py
gesture_recognition/model/keypoint_classifier/: keypoint_classifier.py
gesture_recognition/model/point_history_classifier/: point_history_classifier.py
gesture_recognition/utils/: __init__.py
