<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gesture_recognition</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="lourencorconceicao@gmail.com">lourencorcc</maintainer>
  <license>Apache-2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>opencv-python</build_depend>
  <build_depend>mediapipe</build_depend>
  <build_depend>cv_bridge</build_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>opencv-python</exec_depend>
  <exec_depend>mediapipe</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
